--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <title>Snake</title>
 
   <link rel="stylesheet" href="css/style.css">
@@ -11,33 +13,50 @@
 
 <body>
 
-  <header>
-    <h1>Snake</h1>
-  </header>
+  <div class="wrapper">
 
-  <main>
-    <section>
-      <div id="info" class="info"></div>
+    <header>
+      <h1>Snake</h1>
+    </header>
 
-      <div id="game" class="game"></div>
-    </section>
+    <main>
 
-    <aside>
-      <button>Pause</button>
-      <button>New game</button>
-      <button>Share</button>
-    </aside>
-  </main>
+      <section>
+        <div class="game-wrapper">
 
-  <footer>
-    <div class="copyright"><a href="#" target="_blank">© Alex Simahin 2020</a> </div>
-    <div class="share">
-      <a href="#">VK</a>
-      <a href="#">G</a>
-      <a href="#"></a>
-    </div>
-  </footer>
+          <div id="info" class="info">
+            <span class="score"><i>🍏</i> Score: <span id="score">0</span></span>
+
+            <span class="speed"><i>⚡</i> Speed: <span id="speed">1</span></span>
+          </div>
+
+          <div id="game" class="game">
+            <!-- 			Snake Field			 -->
+          </div>
+        </div>
+      </section>
+
+      <aside>
+        <button class="pause" id="pause">⏸️ Pause</button>
+        <button class="play" id="play">▶️ Play</button>
+        <button class="new" id="new">▶️ New game</button>
+      </aside>
+    </main>
+
+    <footer>
+
+      <div class="copyright">© 2020<a href="https://alexsimahin.github.io/" target="_blank">Alex Simahin</a> </div>
+
+      <div class="share">
+        <a href="#" id="fb" target="_blank">fb</a>
+        <a href="#" id="tw" target="_blank">tw</a>
+        <a href="#" id="inst" target="_blank">inst</a>
+      </div>
+
+    </footer>
+  </div>
 
   <script src="js/script.js" charset="utf-8"></script>
 </body>
+
 </html>
