--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer>
 
-      <div class="copyright">© 2020<a href="https://alexsimahin.github.io/" target="_blank">Alex Simahin</a> </div>
+      <div class="copyright"><span class="year-copyright">© 2020</span><a href="https://alexsimahin.github.io/" target="_blank">Alex Simahin</a> </div>
 
       <div class="share">
         <a href="#" id="fb" target="_blank">fb</a>
