--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <button class="play" id="play">▶️ Play</button>
         <button class="new" id="new">▶️ New game</button>
       </aside>
+
+      <div class="mob-controller">
+        <div class="touch-screen">
+          <p>Будут контройлеры</p>
+        </div>
+      </div>
     </main>
 
     <footer>
